<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/iv_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background_goldberg" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#d9000000"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_action_bar"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:background="#15ffffff"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_version"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:paddingLeft="2dp"
                    android:text=""
                    android:textColor="@color/white"
                    android:textSize="9dp" />

                <TextView
                    android:id="@+id/tv_time_added"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentBottom="true"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="+20"
                    android:textColor="@color/app_clock_green"
                    android:textSize="30dp" />

                <TextView
                    android:id="@+id/tv_time_old"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentBottom="true"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="+20"
                    android:textColor="@color/app_clock_text"
                    android:textSize="30dp" />
            </LinearLayout>

            <View
                android:layout_width="3dp"
                android:layout_height="match_parent"
                android:background="#777777" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/main_button"
                android:drawableBottom="@drawable/ic_arrow_down_button"
                android:gravity="center"
                android:onClick="onArrowRaiseClick"
                android:padding="4dp"
                android:tag="-20"
                android:text="@string/reduce20seconds"
                android:textColor="@color/app_icons" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#777777" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/main_button"
                android:drawableBottom="@drawable/ic_arrow_down_button"
                android:gravity="center"
                android:text="@string/reduceMinute"
                android:onClick="onArrowRaiseClick"
                android:padding="4dp"
                android:tag="-60"
                android:textColor="@color/app_icons" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#777777" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/main_button"
                android:drawableBottom="@drawable/ic_arrow_up_button"
                android:gravity="center"
                android:onClick="onArrowRaiseClick"
                android:padding="4dp"
                android:tag="20"
                android:text="@string/add20seconds"
                android:textColor="@color/app_icons" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#777777" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/main_button"
                android:drawableBottom="@drawable/ic_arrow_up_button"
                android:gravity="center"
                android:onClick="onArrowRaiseClick"
                android:padding="4dp"
                android:text="@string/addMinute"
                android:tag="60"
                android:textColor="@color/app_icons" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#777777" />

            <TextView
                android:id="@+id/btn_pause"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/main_button"
                android:drawableBottom="@drawable/ic_pause_white_48dp"
                android:gravity="center"
                android:onClick="onPauseClick"
                android:text="@string/pause"
                android:textColor="@color/app_icons" />



            <TextView
                android:id="@+id/btn_new"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/main_button"
                android:drawableBottom="@drawable/ic_autorenew_black_24dp"
                android:gravity="center"
                android:onClick="onNewGameClick"
                android:text="@string/new_game"
                android:textColor="@color/app_icons" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#777777" />

            <TextView
                android:id="@+id/btn_play"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/main_button"
                android:drawableBottom="@drawable/ic_play_arrow_white"
                android:gravity="center"
                android:onClick="onPlayClick"
                android:text="@string/next"
                android:textColor="@color/app_icons" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#777777" />

            <TextView
                android:id="@+id/btn_stop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/main_button"
                android:drawableBottom="@drawable/ic_stop_white_48dp"
                android:gravity="center"
                android:onClick="onStopClick"
                android:text="@string/stop"
                android:textColor="@color/app_icons" />
        </LinearLayout>

        <View
            android:id="@+id/v_action_bar_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#777777" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">


            <com.guzon.mytimer.FontFitTextView
                android:id="@+id/tv_time"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:onClick="onTimeClick"
                android:text="12:49"
                android:textColor="@color/app_clock_text" />

        </RelativeLayout>
    </LinearLayout>


    <TextView
        android:id="@+id/tv_flavor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingLeft="2dp"
        android:text="בית ספר לאה גולדברג Ⓒ פבל"
        android:textColor="@color/white"
        android:textSize="12dp"
        android:textStyle="bold" />


</RelativeLayout>